# RAG_MCP

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  client.py  main.py  pyproject.toml
docs/: api-dependencies.md  docling_json_format.md
docs/rfcs/draft/: RFC-0001-rag-mcp-v1-architecture.md  RFC-0002-index-quality-improvements.md  (+1 more)
plan/: README.md  phase-1-keyword-stdio-mvp.md  phase-2-vector-chroma.md  phase-3-docling-structure.md  phase-4-http-parity-release.md
plans/: rl-learning-path.md
scripts/: build_sections_mapping.py  e2e_phase4_smoke.sh  run_toc_chunker_experiment.py  start_streamable_http_bg.sh  stop_streamable_http_bg.sh
src/rag_mcp/: __init__.py  config.py  errors.py  models.py  xml_response.py
tests/e2e/: test_v1_acceptance.py
tests/integration/: test_e2e_multimodal.py  test_phase1_stdio_keyword_flow.py  test_phase2_vector_keyword_parity.py  test_phase3_structure_and_uri_stability.py  test_phase4_http_stdio_parity.py
tests/unit/: test_build_sections_mapping.py  test_chunk_assembler.py  test_chunker.py  test_config.py  test_cross_reference.py  test_docling_parser.py  test_docling_parser_new.py  test_document_model.py  test_embedding_client.py  test_fastapi_app.py  test_handlers_dict.py  test_hybrid_search.py  test_keyword_index.py  test_main.py  test_mcp_server.py  test_rebuild_multimodal.py  test_rebuild_toc_experiment.py  test_rerank.py  test_resource_service_multimodal.py  test_resource_store.py  test_toc_chunker.py  test_transport_schemas.py  test_vector_index.py  test_vlm_client.py  test_xml_response.py
(+59 files in other folders)
