[project]
name = "rag-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "docling>=2.82.0",
    "fastapi>=0.135.2",
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "openai>=1.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
]
